fix: remove scroll on mobile devices

--- a/src/ad.css
+++ b/src/ad.css
@@ -1,8 +1,5 @@
-body {
-    overflow: hidden;
-}
 .ad {
-    position: absolute;
+    position: fixed;
     right: 0;
     bottom: 100px;
     height: 300px;
